--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,7 +11,6 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
-    "@tuesdaycrowd/sentence-transformers": "^1.0.1",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.9",
     "cookie-parser": "^1.4.7",
